--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,32 @@
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
 # Compiled class file
 *.class
+.git
 
 # Log file
-*.log
+*.exceptionRecord
 
 # BlueJ files
 *.ctxt
@@ -19,5 +43,15 @@
 *.tar.gz
 *.rar
 
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+!.mvn/wrapper/maven-wrapper.jar
+.mvn
+
+/target/
+*.iml
+*.xml
+/tmp/
+/logs/
