--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <!-- 基础项 -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.itdeer.kafka</groupId>
-    <artifactId>DataToKafka</artifactId>
+    <artifactId>DataToMySql</artifactId>
     <version>3.0.0</version>
 
     <!-- 添加依赖 -->
@@ -43,6 +43,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
         </dependency>
 
         <dependency>
